text align center; fix audio; max-height 500 on work highlight images

--- a/src/routes/homePage.scss
+++ b/src/routes/homePage.scss
@@ -13,9 +13,12 @@ $palatino-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Ge
 }
 
 .header {
+    padding: 80px 0;
+
     color: $black;
 	font-family: $palatino-family;
-    padding: 80px 0 40px 0;
+    text-align: center;
+
     border-bottom: 1px solid $gray5;
 
     .header-name {
@@ -31,8 +34,8 @@ $palatino-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Ge
         a {
             margin: 0 15px;
 
-            &:first-of-type {
-                margin-left: 0;
+            &.active {
+                border-bottom: 1.5px solid transparentize($black, 0.2);
             }
         }
     }
@@ -43,6 +46,8 @@ $palatino-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Ge
 }
 
 .work-highlight {
+    text-align: center;
+
     .work-highlight-name {
         display: inline-block;
         font-family: $palatino-family;
@@ -52,7 +57,9 @@ $palatino-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Ge
     }
 
     img {
+        display: block;
         width: 100%;
+        max-height: 500px;
         object-fit: cover;
     }
 }
